--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>hello</h1>
     <h2> welcome</h2>
     <p>hello world
-        
+        Lorem ipsum dolor sit amet, consectetur adipisicing.
     </p>
 </body>
 </html>
